--- a/src/assets/scss/_typography.scss
+++ b/src/assets/scss/_typography.scss
@@ -30,4 +30,12 @@
 	color: var(--black);
 	font-size: 16px;
 	line-height: 16px;
+	margin-bottom: 14px;
+}
+.subtitle-black-big {
+	font-family: ArticulatCF, sans-serif;
+	font-weight: 700;
+	color: var(--black);
+	font-size: 24px;
+	line-height: 24px;
 }
