--- a/src/assets/scss/_grid.scss
+++ b/src/assets/scss/_grid.scss
@@ -2,5 +2,9 @@ section {
 	margin: 0 auto;
 	max-width: 1440px;
 	width: 100%;
-	padding-bottom: 100px;
+}
+@media screen and (max-width: 528px) {
+	body {
+		background-color: white;
+	}
 }
