--- a/src/assets/scss/_typography.scss
+++ b/src/assets/scss/_typography.scss
@@ -39,3 +39,17 @@
 	font-size: 24px;
 	line-height: 24px;
 }
+@media screen and (max-width: 528px) {
+	.title {
+		font-size: 24px;
+		line-height: 24px;
+		&-thin {
+			font-size: 24px;
+			line-height: 24px;
+		}
+	}
+	.subtitle-black-big {
+		font-size: 16px;
+		line-height: 16px;
+	}
+}
