--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -4,3 +4,12 @@
 @import "_typography";
 @import "_button";
 @import "_grid";
+
+html {
+  height: 100%;
+  #app {
+    position: relative;
+    min-height: 100%;
+    overflow: hidden;
+  }
+}
