--- a/src/assets/scss/_paginate.scss
+++ b/src/assets/scss/_paginate.scss
@@ -5,12 +5,22 @@
   font-weight: 400;
   font-size: 13px;
   align-items: center;
+  justify-content: center;
+  gap: 10px;
+  margin-top: 45px !important;
+  @media screen and (max-width: $small) {
+    gap: 0px;
+    margin-top: 25px !important;
+  }
   &__prev {
     background-image: url("@/assets/images/icons/Prev.svg");
     width: 8px;
     height: 16px;
     cursor: pointer;
-    margin: 0 15px 0 0;
+    margin: 0 25px 0 0;
+    @media screen and (max-width: $small) {
+      margin: 0 15px 0 0;
+    }
     a {
       width: 8px;
       height: 16px;
@@ -18,20 +28,23 @@
     }
   }
   &__page {
-    height: 16px;
     cursor: pointer;
-    margin: 0 10px;
+    padding: 2px 8px;
     a {
       color: var(--black);
+      &:hover {
+        color: var(--black);
+      }
     }
   }
   &__active {
-    height: 16px;
-    cursor: pointer;
-    margin: 0 10px;
+    border-radius: 5px;
+    background-color: var(--black);
     a {
-      background-color: var(--black);
       color: var(--white);
+      &:hover {
+        color: var(--white);
+      }
     }
   }
   &__next {
@@ -39,7 +52,10 @@
     width: 8px;
     height: 16px;
     cursor: pointer;
-    margin: 0 0 0 15px;
+    margin: 0 0 0 25px;
+    @media screen and (max-width: $small) {
+      margin: 0 0 0 15px;
+    }
     a {
       width: 8px;
       height: 16px;
