--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -7,6 +7,7 @@
 @import "_home";
 @import "_variables.scss";
 @import "_paginate.scss";
+@import "_burger.scss";
 
 html {
   height: 100%;
@@ -14,6 +15,9 @@ html {
     background-color: #f7f8f8;
     @media screen and (max-width: $small) {
       background-color: var(--white);
+      &.bm-overlay {
+        background-color: var(--white);
+      }
     }
   }
   #app {
