--- a/src/assets/scss/_home.scss
+++ b/src/assets/scss/_home.scss
@@ -144,6 +144,13 @@
 		height: 136px;
 		width: 100%;
 		border-radius: 6px;
+		img {
+			width: 100%;
+			height: 100%;
+			object-fit: cover;
+			border-top-right-radius: 6px;
+			border-top-left-radius: 6px;
+		}
 	}
 	&__card-title {
 		display: flex;
