--- a/src/assets/scss/_home.scss
+++ b/src/assets/scss/_home.scss
@@ -110,17 +110,19 @@
 		gap: 10px;
 		justify-content: space-between;
 		flex-wrap: wrap;
-		position: relative;
-		&::before {
-			content: "";
-			position: absolute;
-			width: 205px;
-			height: 189px;
-			bottom: 72px;
-			left: -90px;
-			background: #27d3dd;
-			filter: blur(150px);
-			z-index: -1;
+		&-wrapper {
+			position: relative;
+			&::before {
+				content: "";
+				position: absolute;
+				width: 205px;
+				height: 189px;
+				bottom: 72px;
+				left: -90px;
+				background: #27d3dd;
+				filter: blur(150px);
+				z-index: -1;
+			}
 		}
 	}
 	&__card {
@@ -148,8 +150,7 @@
 			width: 100%;
 			height: 100%;
 			object-fit: cover;
-			border-top-right-radius: 6px;
-			border-top-left-radius: 6px;
+			border-radius: 6px;
 		}
 	}
 	&__card-title {
@@ -348,7 +349,7 @@
 	.listings {
 		margin-top: 0;
 		padding: 0 20px;
-		&__cards::before {
+		&__cards-wrapper::before {
 			display: none;
 		}
 		&__cards {
@@ -362,6 +363,7 @@
 			}
 			&-body {
 				padding: 0;
+				padding-top: 22px;
 			}
 			.overview {
 				color: var(--main);
