--- a/src/assets/scss/_home.scss
+++ b/src/assets/scss/_home.scss
@@ -170,6 +170,7 @@
 			font-weight: 700;
 			line-height: 20px;
 			letter-spacing: 0em;
+			margin-bottom: 0;
 		}
 		span {
 			font-size: 12px;
@@ -182,6 +183,8 @@
 	&__card-flag {
 		width: 28px;
 		height: 18px;
+		flex-shrink: 0;
+		padding-top: 4px;
 		border-radius: 2px;
 	}
 	&__card-invest {
